syntax = "proto3";
package proto;

message InitMsg {
    string RfbHeader = 1;
    string RfbVersion = 2;
    uint32 FBHeight = 3;
    uint32 FBWidth = 4;
    uint32 SecType = 5;
    uint32 StartTime = 6;
    string DesktopName = 7;
    PixelFormat PixelFormat = 8;
}

message PointerEvent {
    uint32 Mask = 1;
    uint32 X = 2;
    uint32 Y = 3;
    uint32 timestamp = 4;

}

message KeyEvent {
    uint32 Down = 1;
    uint32 Key = 2;
    uint32 timestamp = 3;
}

message FbsSegment{
    bytes bytes = 1;
    uint32 timestamp = 2;
}

message PixelFormat{
    uint32 BPP = 1;
	uint32 Depth = 2;
	uint32 BigEndian = 3;
	uint32 TrueColor = 4;
	uint32 RedMax = 5;
	uint32 GreenMax = 6;
    uint32 BlueMax = 7;
	uint32 RedShift = 8;
	uint32 GreenShift = 9;
	uint32 BlueShift = 10; 
}

message Rectangle {
    uint32 X = 1;
    uint32 Y = 2;
    uint32 Width = 3;
    uint32 Height = 4;
    uint32 Enc = 5;
    bytes Bytes = 6;
}

message FramebufferUpdate{
    repeated Rectangle rectangles = 1;
    uint32 timestamp = 2;
}

message Demonstration {
    InitMsg initmsg = 1;
    repeated FramebufferUpdate fbupdates = 2;
    repeated FbsSegment segments = 3;
    repeated PointerEvent pointerevents = 4;
    repeated KeyEvent keyevents = 5;
}